# cpp_vk_lib

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  Doxyfile  README.md  clean_cmake.sh  cmake_clean.sh  cmake_install.cmake  gen_doxygen.sh  lib_vk.pro  main.cpp  pre_commit.sh  vcpkg.json  windows_build.py
benchmark/: CMakeLists.txt  curl.cpp  receiver.cpp  sender.cpp
bot/: CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  worker
bot/commands/: base_command.hpp  docs_search_command.hpp  hide_keyboard_command.hpp  keyboard_command.hpp  on_chat_invite_user_command.hpp  on_message_pin_command.hpp
bot/handlers/: message_handler.hpp
bot/long_poller/: long_poller.hpp
bot/src/: main.cpp
bot/src/commands/: base.hpp  docs_search.hpp  download_voice_message.hpp  hide_keyboard.hpp  keyboard.hpp  raw_method.hpp  set_chat_photo.hpp  upload_voice_message.hpp
bot/src/custom_methods/: photos.hpp
bot/src/events/: on_chat_invite_user.hpp  on_message_pin.hpp
bot/src/handlers/: message_handler.hpp
bot/src/long_poller/: long_poller.hpp
bot/src/utils/: string_utils.hpp
bot/utils/: string_utils.hpp
cpp_vk_lib/: CMakeLists.txt
cpp_vk_lib/include/cpp_vk_lib/runtime/: result.hpp  setup_logger.hpp  signal_handlers.hpp  stacktrace_dump.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/: api_constants.hpp  common.hpp  cpp_vk_lib.hpp  setup_logger.hpp
cpp_vk_lib/runtime/include/misc/: cppdefs.hpp
cpp_vk_lib/runtime/include/net/: network.hpp
cpp_vk_lib/runtime/include/processing/: task_queue.hpp
cpp_vk_lib/runtime/include/string_utils/: string_utils.hpp
cpp_vk_lib/runtime/src/: implementation.cpp
cpp_vk_lib/runtime/src/net/: network.cpp
cpp_vk_lib/runtime/src/processing/: task_queue.cpp
cpp_vk_lib/src/runtime/: implementation.cpp  setup_logger.cpp  signal_handlers.cpp  stacktrace_dump.cpp
cpp_vk_lib/src/runtime/net/: network.cpp
cpp_vk_lib/src/vk/: implementation.cpp
cpp_vk_lib/src/vk/attachment/: audio.cpp  audio_message.cpp  base.cpp  document.cpp  implementation.cpp  photo.cpp  video.cpp  wall.cpp
cpp_vk_lib/src/vk/config/: config.cpp
cpp_vk_lib/src/vk/error/: error_code.cpp  exception.cpp  (+1 more)
cpp_vk_lib/vk/include/: api_constants.hpp  common.hpp  log_level.hpp
cpp_vk_lib/vk/src/: implementation.cpp
dependencies/: CMakeLists.txt  cmake_install.cmake
dependencies/logger/: README.md  logger.cpp  logger.hpp
dependencies/simdjson/: libsimdjson.so.7  libsimdjson.so.7.0.0  simdjson-config-version.cmake  simdjson-config.cmake
examples/: CMakeLists.txt  docs_search.cpp  download_voice_message.hpp  forward_community_post.hpp  long_poll.cpp  long_poll_api.hpp  main.cpp  search_documents.hpp  upload_audio_message.cpp  upload_audio_message.hpp  upload_audio_to_user_playlist.hpp  upload_chat_photo.hpp  upload_photo.hpp  vk_example.pro  wall_get.cpp
examples/bot/: CMakeLists.txt
examples/bot/src/: main.cpp
lib/: CMakeLists.txt  Doxyfile  cmake_install.cmake
lib/include/api/: base_object.hpp  long_poll_api.hpp  service.hpp
lib/include/attachment/: attachment.hpp
lib/include/config/: loader.hpp
lib/include/cpp_vk_lib/: common.hpp  log_level.hpp
lib/include/document/: common_document.hpp  common_document.hpp.autosave
lib/include/events/: common_event.hpp  message_new.hpp  wall_post_new.hpp  wall_reply_new.hpp  wall_repost.hpp
lib/include/exception/: error_processor.hpp  exception.hpp
lib/include/keyboard/: colors.hpp  flags.hpp  layout.hpp  location_button.hpp  open_app_button.hpp  text_button.hpp  vk_pay_button.hpp
lib/include/long_poll/: api.hpp  data.hpp  long_poll_api.hpp  long_poll_data.hpp
lib/include/method_utils/: message_constructor.hpp  method_utils.hpp
lib/include/methods/: audio.hpp  docs.hpp  groups.hpp  messages.hpp  photos.hpp  utils.hpp  video.hpp
lib/include/misc/: backtrace.hpp  cppdefs.hpp
lib/include/net/: network_client.hpp
lib/include/oauth/: client.hpp
lib/include/processing/: at_program_exit.hpp  backtrace.hpp  error_processor.hpp  exception.hpp  process_error.hpp  task_queue.hpp  thread_pool.hpp
lib/include/string_util/: string_util.hpp
lib/include/string_utils/: string_utils.hpp
lib/include/utility/: exception.hpp
lib/src/api/: base_object.cpp  long_poll_api.cpp  service.cpp
lib/src/attachment/: attachment.cpp
lib/src/config/: loader.cpp
lib/src/document/: common.cpp  common_document.cpp
lib/src/events/: common_event.cpp  message_new.cpp  wall_post_new.cpp  wall_reply_new.cpp  wall_repost.cpp
lib/src/exception/: error_processor.cpp
lib/src/keyboard/: layout.cpp
lib/src/long_poll/: api.cpp  long_poll_api.cpp
lib/src/method_utils/: method_utils.cpp
lib/src/methods/: audio.cpp  docs.cpp  groups.cpp  messages.cpp  photos.cpp  utils.cpp  video.cpp
lib/src/net/: client.cpp  network.cpp  network_client.cpp  request_manager.cpp
lib/src/oauth/: client.cpp
lib/src/processing/: error_processor.cpp  task_queue.cpp  thread_pool.cpp
lib/vk/include/: common.hpp
modules/: CMakeLists.txt
test/: CMakeLists.txt  api_tests.cpp  attachment_tests.cpp  button_tests.cpp  config_tests.cpp  curl_tests.cpp  error_code_tests.cpp  event_tests.cpp  exception_tests.cpp  main.cpp  string_util_tests.cpp  task_queue_tests.cpp
test/attachment_tests/: CMakeLists.txt  attachment_tests.hpp  main.cpp
test/button_tests/: CMakeLists.txt  button_tests.hpp  main.cpp
test/config_tests/: CMakeLists.txt  main.cpp
test/event_tests/: CMakeLists.txt  main.cpp  message_new_tests.hpp  wall_post_new_tests.hpp  wall_reply_new_tests.hpp
test/exception_tests/: CMakeLists.txt  main.cpp
test/long_poll/: long_poll.cpp
test/message_constructor_tests/: CMakeLists.txt  main.cpp
test/string_util_tests/: CMakeLists.txt  convert_tests.hpp  format_tests.hpp  join_tests.hpp  main.cpp  split_tests.hpp
test/task_queue_tests/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  api_tests.hpp  attachment_tests.hpp  config_tests.hpp  curl_tests.hpp  error_code_tests.hpp  event_tests.hpp  exception_tests.hpp  keyboard_tests.hpp  main.cpp  result_tests.hpp  string_util_tests.hpp
(+2982 files in other folders)
