include_directories(../dependencies/dependencies/googletest/googletest/include)

add_subdirectory(attachment_tests)
add_subdirectory(button_tests)
add_subdirectory(config_tests)
add_subdirectory(event_tests)
add_subdirectory(exception_tests)
add_subdirectory(string_util_tests)
add_subdirectory(task_queue_tests)
